# portgl

./: Cargo.toml  README.md  diagram.json  wokwi.toml
.cargo/: config.toml
src/: main.rs  math.rs
src/display/: dvi.rs  edid.rs  mod.rs  tmds.rs
src/graphics/: camera.rs  mod.rs  texture.rs  viewport.rs
src/model/: mod.rs  model.rs
src/types/: angle.rs  matrix.rs  mod.rs  quat.rs  vector.rs
tools/: lutBuilder.py
