[package]
edition = "2021"
name = "portgl"
version = "0.1.0"

[[bin]]
name = "portgl"
path = "./src/main.rs"
test = false

[dependencies]
critical-section = "1.2.0"
esp-backtrace = { version = "0.15.1", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "defmt",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32s3"] }
esp-println = { version = "0.13.0", features = [
  "esp32s3",
  "log",
  "defmt-espflash",
] }
defmt = "1.0.1"
log = "0.4.26"
esp-alloc = "0.7.0"
heapless = "0.8.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
